// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate an expense totaling $195.00 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should generate an expense totaling £46.95 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $25.23
  </h1>
</div>
`;
